@@ -38,9 +38,10 @@ import org.slf4j.LoggerFactory;
 import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 
 import static java.util.Objects.isNull;
+import static org.apache.hadoop.hive.conf.HiveConf.ConfVars.HIVE_COMPACTOR_ABORTEDTXN_THRESHOLD;
+import static org.apache.hadoop.hive.conf.HiveConf.ConfVars.HIVE_COMPACTOR_ABORTEDTXN_TIME_THRESHOLD;
 
 /**
  * Abort-cleanup based implementation of TaskHandler.
@@ -51,8 +52,7 @@ class AbortedTxnCleaner extends TaskHandler {
   private static final Logger LOG = LoggerFactory.getLogger(AbortedTxnCleaner.class.getName());
 
   public AbortedTxnCleaner(HiveConf conf, TxnStore txnHandler,
-                           MetadataCache metadataCache, boolean metricsEnabled,
-                           FSRemover fsRemover) {
+        MetadataCache metadataCache, boolean metricsEnabled, FSRemover fsRemover) {
     super(conf, txnHandler, metadataCache, metricsEnabled, fsRemover);
   }
 
@@ -73,23 +73,23 @@ class AbortedTxnCleaner extends TaskHandler {
       e. Fetch the aborted write IDs from the AcidState and use it to delete the associated metadata in the TXN_COMPONENTS table.
    **/
   @Override
-  public List<Runnable> getTasks() throws MetaException {
-    int abortedThreshold = HiveConf.getIntVar(conf,
-              HiveConf.ConfVars.HIVE_COMPACTOR_ABORTEDTXN_THRESHOLD);
-    long abortedTimeThreshold = HiveConf
-              .getTimeVar(conf, HiveConf.ConfVars.HIVE_COMPACTOR_ABORTEDTXN_TIME_THRESHOLD,
-                      TimeUnit.MILLISECONDS);
-    List<CompactionInfo> readyToCleanAborts = txnHandler.findReadyToCleanAborts(abortedTimeThreshold, abortedThreshold);
+  public List<Runnable> getTasks(HiveConf conf) throws MetaException {
+    int abortedThreshold = HiveConf.getIntVar(conf, HIVE_COMPACTOR_ABORTEDTXN_THRESHOLD);
+    long abortedTimeThreshold = HiveConf.getTimeVar(conf, HIVE_COMPACTOR_ABORTEDTXN_TIME_THRESHOLD,
+        TimeUnit.MILLISECONDS);
+    List<CompactionInfo> readyToCleanAborts =
+        txnHandler.findReadyToCleanAborts(abortedTimeThreshold, abortedThreshold);
 
     if (!readyToCleanAborts.isEmpty()) {
-      return readyToCleanAborts.stream().map(info -> ThrowingRunnable.unchecked(() ->
-                      clean(info, info.minOpenWriteTxnId, metricsEnabled)))
-              .collect(Collectors.toList());
+      return readyToCleanAborts.stream()
+          .map(info -> ThrowingRunnable.unchecked(
+              () -> clean(info, metricsEnabled)))
+          .toList();
     }
     return Collections.emptyList();
   }
 
-  private void clean(CompactionInfo info, long minOpenWriteTxn, boolean metricsEnabled) throws MetaException, InterruptedException {
+  private void clean(CompactionInfo info, boolean metricsEnabled) throws MetaException, InterruptedException {
     LOG.info("Starting cleaning for {}", info);
     PerfLogger perfLogger = PerfLogger.getPerfLogger(false);
     String cleanerMetric = MetricsConstants.COMPACTION_CLEANER_CYCLE + "_";
@@ -98,7 +98,8 @@ class AbortedTxnCleaner extends TaskHandler {
         perfLogger.perfLogBegin(AbortedTxnCleaner.class.getName(), cleanerMetric);
       }
       Partition p = null;
-      Table t = metadataCache.computeIfAbsent(info.getFullTableName(), () -> resolveTable(info.dbname, info.tableName));
+      Table t = resolveTable(info);
+
       if (isNull(t)) {
         // The table was dropped before we got around to cleaning it.
         LOG.info("Unable to find table {}, assuming it was dropped.", info.getFullTableName());
@@ -109,25 +110,24 @@ class AbortedTxnCleaner extends TaskHandler {
         p = resolvePartition(info.dbname, info.tableName, info.partName);
         if (isNull(p)) {
           // The partition was dropped before we got around to cleaning it.
-          LOG.info("Unable to find partition {}, assuming it was dropped.",
-                  info.getFullPartitionName());
+          LOG.info("Unable to find partition {}, assuming it was dropped.", info.getFullPartitionName());
           txnHandler.markCleaned(info);
           return;
         }
       }
 
-      String location = CompactorUtil.resolveStorageDescriptor(t,p).getLocation();
-      info.runAs = TxnUtils.findUserToRunAs(location, t, conf);
-      abortCleanUsingAcidDir(info, location, minOpenWriteTxn);
+      String location = CompactorUtil.resolveStorageDescriptor(t, p).getLocation();
+      info.runAs = TxnUtils.findUserToRunAs(location, t, getConf());
+      abortCleanUsingAcidDir(info, t, location);
 
     } catch (InterruptedException e) {
       LOG.error("Caught an interrupted exception when cleaning, unable to complete cleaning of {} due to {}", info,
-              e.getMessage());
+          e.getMessage());
       handleCleanerAttemptFailure(info, e.getMessage());
       throw e;
     } catch (Exception e) {
       LOG.error("Caught exception when cleaning, unable to complete cleaning of {} due to {}", info,
-              e.getMessage());
+          e.getMessage());
       handleCleanerAttemptFailure(info, e.getMessage());
       throw new MetaException(e.getMessage());
     } finally {
@@ -137,22 +137,24 @@ class AbortedTxnCleaner extends TaskHandler {
     }
   }
 
-  private void abortCleanUsingAcidDir(CompactionInfo info, String location, long minOpenWriteTxn) throws Exception {
-    ValidTxnList validTxnList =
-            TxnUtils.createValidTxnListForCleaner(txnHandler.getOpenTxns(), minOpenWriteTxn, true);
+  private void abortCleanUsingAcidDir(CompactionInfo info, Table table, String location) throws Exception {
+    ValidTxnList validTxnList = TxnUtils.createValidTxnListForCleaner(
+        getOpenTxns(), info.minOpenWriteTxnId, true);
     //save it so that getAcidState() sees it
-    conf.set(ValidTxnList.VALID_TXNS_KEY, validTxnList.writeToString());
+    getConf().set(ValidTxnList.VALID_TXNS_KEY, validTxnList.writeToString());
 
+    // Creating 'reader' list since we are interested in the set of 'obsolete' files
     ValidReaderWriteIdList validWriteIdList = getValidCleanerWriteIdList(info, validTxnList);
+    LOG.debug("Cleaning based on writeIdList: {}", validWriteIdList);
 
     // Set the highestWriteId of the cleanup equal to the min(minOpenWriteId - 1, highWatermark).
-    // This is necessary for looking at the complete state of the table till the min open write Id
+    // This is necessary for looking at the complete state of the table till the min open writeId
     // (if there is an open txn on the table) or the highestWatermark.
     // This is used later on while deleting the records in TXN_COMPONENTS table.
-    info.highestWriteId = Math.min(isNull(validWriteIdList.getMinOpenWriteId()) ?
-            Long.MAX_VALUE : validWriteIdList.getMinOpenWriteId() - 1, validWriteIdList.getHighWatermark());
-    Table table = metadataCache.computeIfAbsent(info.getFullTableName(), () -> resolveTable(info.dbname, info.tableName));
-    LOG.debug("Cleaning based on writeIdList: {}", validWriteIdList);
+    info.highestWriteId = Math.min(
+        isNull(validWriteIdList.getMinOpenWriteId()) ?
+            Long.MAX_VALUE : validWriteIdList.getMinOpenWriteId() - 1,
+        validWriteIdList.getHighWatermark());
 
     boolean success = cleanAndVerifyObsoleteDirectories(info, location, validWriteIdList, table);
     if (success || CompactorUtil.isDynPartAbort(table, info.partName)) {
@@ -160,6 +162,5 @@ class AbortedTxnCleaner extends TaskHandler {
     } else {
       LOG.warn("Leaving aborted entry {} in TXN_COMPONENTS table.", info);
     }
-
   }
 }
