@@ -52,7 +52,6 @@ import org.slf4j.LoggerFactory;
 import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
-import java.util.stream.Collectors;
 
 import static org.apache.hadoop.hive.conf.HiveConf.ConfVars.HIVE_COMPACTOR_CLEANER_RETENTION_TIME;
 import static org.apache.hadoop.hive.conf.HiveConf.ConfVars.HIVE_COMPACTOR_DELAYED_CLEANUP_ENABLED;
@@ -67,17 +66,16 @@ class CompactionCleaner extends TaskHandler {
   private static final Logger LOG = LoggerFactory.getLogger(CompactionCleaner.class.getName());
 
   public CompactionCleaner(HiveConf conf, TxnStore txnHandler,
-                                MetadataCache metadataCache, boolean metricsEnabled,
-                                FSRemover fsRemover) {
+        MetadataCache metadataCache, boolean metricsEnabled, FSRemover fsRemover) {
     super(conf, txnHandler, metadataCache, metricsEnabled, fsRemover);
   }
 
   @Override
-  public List<Runnable> getTasks() throws MetaException {
+  public List<Runnable> getTasks(HiveConf conf) throws MetaException {
     long minOpenTxnId = txnHandler.findMinOpenTxnIdForCleaner();
     long retentionTime = HiveConf.getBoolVar(conf, HIVE_COMPACTOR_DELAYED_CLEANUP_ENABLED)
-            ? HiveConf.getTimeVar(conf, HIVE_COMPACTOR_CLEANER_RETENTION_TIME, TimeUnit.MILLISECONDS)
-            : 0;
+        ? HiveConf.getTimeVar(conf, HIVE_COMPACTOR_CLEANER_RETENTION_TIME, TimeUnit.MILLISECONDS)
+        : 0;
     List<CompactionInfo> readyToClean = txnHandler.findReadyToClean(minOpenTxnId, retentionTime);
     if (!readyToClean.isEmpty()) {
       long minTxnIdSeenOpen = Math.min(minOpenTxnId, txnHandler.findMinTxnIdSeenOpen());
@@ -87,20 +85,21 @@ class CompactionCleaner extends TaskHandler {
       // to the clean method, to avoid cleaning up deltas needed for running queries
       // when min_history_level is finally dropped, than every HMS will commit compaction the new way
       // and minTxnIdSeenOpen can be removed and minOpenTxnId can be used instead.
-      return readyToClean.stream().map(ci -> {
-        long cleanerWaterMark = (ci.minOpenWriteId >= 0) ? ci.nextTxnId + 1 : minTxnIdSeenOpen;
-        LOG.info("Cleaning based on min open txn id: {}", cleanerWaterMark);
-        return ThrowingRunnable.unchecked(() -> clean(ci, cleanerWaterMark, metricsEnabled));
-      }).collect(Collectors.toList());
+      return readyToClean.stream()
+          .map(ci -> ThrowingRunnable.unchecked(
+              () -> clean(ci, minTxnIdSeenOpen, metricsEnabled)))
+          .toList();
     }
     return Collections.emptyList();
   }
 
   private void clean(CompactionInfo ci, long minOpenTxn, boolean metricsEnabled) throws MetaException {
-    LOG.info("Starting cleaning for {}", ci);
+    LOG.info("Starting cleaning for {}, based on min open {}", ci,
+        (ci.minOpenWriteId > 0) ? "writeId: " + ci.minOpenWriteId : "txnId: " + minOpenTxn);
+
     PerfLogger perfLogger = PerfLogger.getPerfLogger(false);
     String cleanerMetric = MetricsConstants.COMPACTION_CLEANER_CYCLE + "_" +
-            (!isNull(ci.type) ? ci.type.toString().toLowerCase() : null);
+        (!isNull(ci.type) ? ci.type.toString().toLowerCase() : null);
     try {
       if (metricsEnabled) {
         perfLogger.perfLogBegin(CompactionCleaner.class.getName(), cleanerMetric);
@@ -111,11 +110,12 @@ class CompactionCleaner extends TaskHandler {
       Partition p = null;
 
       if (isNull(location)) {
-        t = metadataCache.computeIfAbsent(ci.getFullTableName(), () -> resolveTable(ci.dbname, ci.tableName));
+        t = resolveTable(ci);
+
         if (isNull(t)) {
           // The table was dropped before we got around to cleaning it.
           LOG.info("Unable to find table {}, assuming it was dropped. {}", ci.getFullTableName(),
-                  idWatermark(ci));
+              idWatermark(ci));
           txnHandler.markCleaned(ci);
           return;
         }
@@ -129,8 +129,8 @@ class CompactionCleaner extends TaskHandler {
           p = resolvePartition(ci.dbname, ci.tableName, ci.partName);
           if (isNull(p)) {
             // The partition was dropped before we got around to cleaning it.
-            LOG.info("Unable to find partition {}, assuming it was dropped. {}",
-                    ci.getFullPartitionName(), idWatermark(ci));
+            LOG.info("Unable to find partition {}, assuming it was dropped. {}", ci.getFullPartitionName(),
+                idWatermark(ci));
             txnHandler.markCleaned(ci);
             return;
           }
@@ -146,22 +146,23 @@ class CompactionCleaner extends TaskHandler {
 
       if (!isNull(t) || !isNull(ci.partName)) {
         String path = isNull(location)
-                ? CompactorUtil.resolveStorageDescriptor(t, p).getLocation()
-                : location;
+            ? CompactorUtil.resolveStorageDescriptor(t, p).getLocation()
+            : location;
         boolean dropPartition = !isNull(ci.partName) && isNull(p);
 
         //check if partition wasn't re-created
         if (dropPartition && isNull(resolvePartition(ci.dbname, ci.tableName, ci.partName))) {
           cleanUsingLocation(ci, path, true);
         } else {
-          cleanUsingAcidDir(ci, path, minOpenTxn);
+          long cleanerWaterMark = (ci.minOpenWriteId > 0) ? ci.nextTxnId + 1 : minOpenTxn;
+          cleanUsingAcidDir(ci, t, path, cleanerWaterMark);
         }
       } else {
         cleanUsingLocation(ci, location, false);
       }
     } catch (Exception e) {
       LOG.error("Caught exception when cleaning, unable to complete cleaning of {} due to {}", ci,
-              e.getMessage());
+          e.getMessage());
       if (metricsEnabled) {
         Metrics.getOrCreateCounter(MetricsConstants.COMPACTION_CLEANER_FAILURE_COUNTER).inc();
       }
@@ -203,18 +204,17 @@ class CompactionCleaner extends TaskHandler {
     }
   }
 
-  private void cleanUsingAcidDir(CompactionInfo ci, String location, long minOpenTxn) throws Exception {
-    ValidTxnList validTxnList =
-            TxnUtils.createValidTxnListForCleaner(txnHandler.getOpenTxns(), minOpenTxn, false);
+  private void cleanUsingAcidDir(CompactionInfo ci, Table table, String location, long minOpenTxn) throws Exception {
+    ValidTxnList validTxnList = TxnUtils.createValidTxnListForCleaner(
+        getOpenTxns(), minOpenTxn, false);
     //save it so that getAcidState() sees it
-    conf.set(ValidTxnList.VALID_TXNS_KEY, validTxnList.writeToString());
+    getConf().set(ValidTxnList.VALID_TXNS_KEY, validTxnList.writeToString());
     /*
-     * {@code validTxnList} is capped by minOpenTxnGLB so if
+     * {@code validTxnList} is capped by global minOpenTxn so if
      * {@link AcidUtils#getAcidState(Path, Configuration, ValidWriteIdList)} sees a base/delta
      * produced by a compactor, that means every reader that could be active right now see it
-     * as well.  That means if this base/delta shadows some earlier base/delta, it will be
+     * as well. That means if this base/delta shadows some earlier base/delta, it will be
      * used in favor of any files that it shadows. Thus, the shadowed files are safe to delete.
-     *
      *
      * The metadata about aborted writeIds (and consequently aborted txn IDs) cannot be deleted
      * above COMPACTION_QUEUE.CQ_HIGHEST_WRITE_ID.
@@ -241,7 +241,6 @@ class CompactionCleaner extends TaskHandler {
 
     // Creating 'reader' list since we are interested in the set of 'obsolete' files
     ValidReaderWriteIdList validWriteIdList = getValidCleanerWriteIdList(ci, validTxnList);
-    Table table = metadataCache.computeIfAbsent(ci.getFullTableName(), () -> resolveTable(ci.dbname, ci.tableName));
     LOG.debug("Cleaning based on writeIdList: {}", validWriteIdList);
 
     boolean success = cleanAndVerifyObsoleteDirectories(ci, location, validWriteIdList, table);
@@ -249,12 +248,13 @@ class CompactionCleaner extends TaskHandler {
       txnHandler.markCleaned(ci);
     } else {
       txnHandler.clearCleanerStart(ci);
-      LOG.warn("No files were removed. Leaving queue entry {} in ready for cleaning state.", ci);
+      LOG.warn("Leaving queue entry {} in ready for cleaning state.", ci);
     }
   }
 
   private LockRequest createLockRequest(CompactionInfo ci) {
-    return CompactorUtil.createLockRequest(conf, ci, 0, LockType.EXCL_WRITE, DataOperationType.DELETE);
+    return CompactorUtil.createLockRequest(
+        getConf(), ci, 0, LockType.EXCL_WRITE, DataOperationType.DELETE);
   }
 
   private static String idWatermark(CompactionInfo ci) {
@@ -263,7 +263,7 @@ class CompactionCleaner extends TaskHandler {
 
   @Override
   protected ValidReaderWriteIdList getValidCleanerWriteIdList(CompactionInfo ci, ValidTxnList validTxnList)
-          throws NoSuchTxnException, MetaException {
+      throws Exception {
     ValidReaderWriteIdList validWriteIdList = super.getValidCleanerWriteIdList(ci, validTxnList);
     /*
      * We need to filter the obsoletes dir list, to only remove directories that were made obsolete by this compaction
@@ -279,11 +279,14 @@ class CompactionCleaner extends TaskHandler {
   private CleanupRequest getCleaningRequestBasedOnLocation(CompactionInfo ci, String location) {
     String strIfPurge = ci.getProperty("ifPurge");
     boolean ifPurge = strIfPurge != null || Boolean.parseBoolean(ci.getProperty("ifPurge"));
-
     Path obsoletePath = new Path(location);
+
     return new CleanupRequestBuilder()
-            .setLocation(location).setDbName(ci.dbname).setFullPartitionName(ci.getFullPartitionName())
-            .setRunAs(ci.runAs).setPurge(ifPurge).setObsoleteDirs(Collections.singletonList(obsoletePath))
-            .build();
+        .setLocation(location).setDbName(ci.dbname)
+        .setFullPartitionName(ci.getFullPartitionName())
+        .setRunAs(ci.runAs)
+        .setPurge(ifPurge)
+        .setObsoleteDirs(Collections.singletonList(obsoletePath))
+        .build();
   }
 }
